refactor(validation): simplify request validation
2) Implement Strategy and Chain of Responsibility patterns properly

3) Replace simple validators by Jakarta Validation API annotations

refs: TMI-315